[package]
name = "docker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5.0"
dockerfile-parser = "0.9"
eframe = "0.31"
oci-client = "0.16"
oci-spec = "0.9"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.14"
tokio = { version = "1.48", features = ["fs", "io-util", "rt"] }
